test/expected/explain_fithrk_v.out
explain void f( int x, this S &self )
                              ^
31: error: "this" can be only first parameter
